Ingress/sercive.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-ingress-ns
  labels:
    app: nginx-app
spec:
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
